# RobotCoverageSys

./: .gitignore  README.md
calibration/: CMakeLists.txt
calibration/results/: camera-bashroom.yml  camera-guest-bedroom1.yml  camera-livingroom1.yml  camera-livingroom2.yml  camera-livingroom3.yml  camera-xf.yml
calibration/src/: calibration.cpp  video2pic.cpp
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/CoverageTest/: CMakeLists.txt  package.xml
catkin_ws/src/CoverageTest/include/CoverageTest/: tf-coordinates.hpp
catkin_ws/src/CoverageTest/src/: cameraTF.cpp  gridBr.cpp  pathBr.cpp
homography/: CMakeLists.txt
homography/include/: calibration.hpp  coordinates.hpp
homography/src/: homography.cpp
